# workbench

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LAUNCH.md  MIGRATION.md  README.md  RELEASING.md  SECURITY.md  biome.json  package.json  tsconfig.base.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  desktop-pr.yml  desktop-release.yml  standalone-image.yml
apps/desktop/: .env.example  .gitignore  PRODUCTION-CHECKLIST.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/sidecar/: build.ts
apps/desktop/src/: app.tsx  styles.css  types.d.ts
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  sidecar-entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  redis_ping.rs  secrets.rs  sidecar.rs
apps/standalone/: Dockerfile  README.md  package.json
apps/standalone/src/: index.ts
apps/web/: package.json  source.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/public/: llms.txt
examples/with-astro/: README.md  astro.config.mjs  package.json
examples/with-astro/src/: queues.ts  worker.ts
examples/with-bun/: README.md  package.json
examples/with-h3/: README.md  package.json
examples/with-hono/: README.md  package.json
examples/with-koa/: README.md  package.json
examples/with-nuxt/: README.md  app.vue  nuxt.config.ts  package.json
scripts/: smoke.ts
(+104 files in other folders)
