[package]
name = "workbench-desktop"
version = "0.1.0"
description = "Workbench desktop"
authors = ["Workbench"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "workbench_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-shell = "2.3"
tauri-plugin-dialog = "2.7"
tauri-plugin-os = "2.3"
tauri-plugin-process = "2.3"
tauri-plugin-store = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp", "tokio-native-tls-comp"] }
url = "2.5"
log = "0.4"
thiserror = "2.0"

# OS-native credential store: macOS Keychain, Windows Credential Manager,
# Linux Secret Service (libsecret/kwallet). Used to persist the Redis
# password so the auto-reconnect on launch doesn't need the user to retype.
# Pinned to 3.x — 4.x is a CLI/binary distribution; the library API lives
# under `keyring-core` and the platform-specific store crates.
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.10"
tauri-plugin-single-instance = "2.4"
